trocado para pera

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <tr>
                 <th>quantidade</th>
                 <th>preço</th>
-                <th>uva</th>
+                <th>pera</th>
                 <th>treta</th>
             </tr>
          
